sys/prebuilt-bindings/geos_3.13.rs

extern "C" {
    pub fn GEOSWKBWriter_create() -> *mut GEOSWKBWriter;
}
extern "C" {
    pub fn GEOSWKBWriter_destroy(writer: *mut GEOSWKBWriter);
}
extern "C" {
    pub fn GEOSWKBWriter_write(
        writer: *mut GEOSWKBWriter,
        g: *const GEOSGeometry,
        size: *mut usize,
    ) -> *mut libc::c_uchar;
}
extern "C" {
    pub fn GEOSWKBWriter_writeHEX(
        writer: *mut GEOSWKBWriter,
        g: *const GEOSGeometry,
        size: *mut usize,
    ) -> *mut libc::c_uchar;
}
extern "C" {
    pub fn GEOSWKBWriter_getOutputDimension(writer: *const GEOSWKBWriter) -> libc::c_int;
}
extern "C" {
    pub fn GEOSWKBWriter_setOutputDimension(writer: *mut GEOSWKBWriter, newDimension: libc::c_int);
}
extern "C" {
    pub fn GEOSWKBWriter_getByteOrder(writer: *const GEOSWKBWriter) -> libc::c_int;
}
extern "C" {
    pub fn GEOSWKBWriter_setByteOrder(writer: *mut GEOSWKBWriter, byteOrder: libc::c_int);
}
extern "C" {
    pub fn GEOSWKBWriter_getFlavor(writer: *const GEOSWKBWriter) -> libc::c_int;
}
extern "C" {
    pub fn GEOSWKBWriter_setFlavor(writer: *mut GEOSWKBWriter, flavor: libc::c_int);
}
extern "C" {
    pub fn GEOSWKBWriter_getIncludeSRID(writer: *const GEOSWKBWriter) -> libc::c_char;
}
extern "C" {
    pub fn GEOSWKBWriter_setIncludeSRID(writer: *mut GEOSWKBWriter, writeSRID: libc::c_char);
}
extern "C" {
    pub fn GEOSGeoJSONReader_create() -> *mut GEOSGeoJSONReader;
}
extern "C" {
    pub fn GEOSGeoJSONReader_destroy(reader: *mut GEOSGeoJSONReader);
}
extern "C" {
    pub fn GEOSGeoJSONReader_readGeometry(
        reader: *mut GEOSGeoJSONReader,
        geojson: *const libc::c_char,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeoJSONWriter_create() -> *mut GEOSGeoJSONWriter;
}
extern "C" {
    pub fn GEOSGeoJSONWriter_destroy(writer: *mut GEOSGeoJSONWriter);
}
extern "C" {
    pub fn GEOSGeoJSONWriter_writeGeometry(
        writer: *mut GEOSGeoJSONWriter,
        g: *const GEOSGeometry,
        indent: libc::c_int,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn GEOS_getWKBOutputDims_r(handle: GEOSContextHandle_t) -> libc::c_int;
}
extern "C" {
    pub fn GEOS_setWKBOutputDims_r(
        handle: GEOSContextHandle_t,
        newDims: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOS_getWKBByteOrder_r(handle: GEOSContextHandle_t) -> libc::c_int;
}
extern "C" {
    pub fn GEOS_setWKBByteOrder_r(
        handle: GEOSContextHandle_t,
        byteOrder: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomFromWKB_buf_r(
        handle: GEOSContextHandle_t,
        wkb: *const libc::c_uchar,
        size: usize,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeomToWKB_buf_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        size: *mut usize,
    ) -> *mut libc::c_uchar;
}
extern "C" {
    pub fn GEOSGeomFromHEX_buf_r(
        handle: GEOSContextHandle_t,
        hex: *const libc::c_uchar,
        size: usize,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeomToHEX_buf_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        size: *mut usize,
    ) -> *mut libc::c_uchar;
}
extern "C" {
    pub fn GEOS_getWKBOutputDims() -> libc::c_int;
}
extern "C" {
    pub fn GEOS_setWKBOutputDims(newDims: libc::c_int) -> libc::c_int;
}
extern "C" {
    pub fn GEOS_getWKBByteOrder() -> libc::c_int;
}
extern "C" {
    pub fn GEOS_setWKBByteOrder(byteOrder: libc::c_int) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomFromWKB_buf(wkb: *const libc::c_uchar, size: usize) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeomToWKB_buf(g: *const GEOSGeometry, size: *mut usize) -> *mut libc::c_uchar;
}
extern "C" {
    pub fn GEOSGeomFromHEX_buf(hex: *const libc::c_uchar, size: usize) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeomToHEX_buf(g: *const GEOSGeometry, size: *mut usize) -> *mut libc::c_uchar;
}
